Toevoegen energieprestaties aan testdata

--- a/tests/data/input/zelfstandige_woonruimten/12006000004.md
+++ b/tests/data/input/zelfstandige_woonruimten/12006000004.md
@@ -2,3 +2,5 @@ Cool
 Galerijflat
 
 Veel ingebouwde kasten die met vertrek moeten worden meegerekend.
+
+Op 2 mei 2024 had deze eenheid geen geldige energieprestatie
